cluster/routes/grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: grafana-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - grafana.aks-demo.org
    port:
      name: https-443-grafana.aks-demo.org
      number: 443
      protocol: HTTPS
    tls:
      credentialName: cert-grafana.aks-demo.org
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: grafana-system
spec:
  hosts:
  - grafana.aks-demo.org
  gateways:
  - grafana-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: grafana-system
spec:
  host: grafana
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
