cluster/routes/kiali.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: kiali-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - kiali.aks-demo.org
    port:
      name: https-443-kiali.aks-demo.org
      number: 443
      protocol: HTTPS
    tls:
      credentialName: cert-kiali.aks-demo.org
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: kiali-system
spec:
  hosts:
  - kiali.aks-demo.org
  gateways:
  - kiali-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kiali
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: kiali-system
spec:
  host: kiali
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
