cluster/routes/prometheus.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: prometheus-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - prometheus.aks-demo.org
    port:
      name: https-443-prometheus.aks-demo.org
      number: 443
      protocol: HTTPS
    tls:
      credentialName: cert-prometheus.aks-demo.org
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: prometheus-system
spec:
  hosts:
  - prometheus.aks-demo.org
  gateways:
  - prometheus-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus-server
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus
  namespace: prometheus-system
spec:
  host: prometheus-server
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
